# Django-Autopark

./: .env.dev  .gitignore  .gitlab-ci.yml  Dockerfile  LICENCE.md  Pipfile  README.md  cypress.config.js  docker-compose.yml  entrypoint.sh  getting_started.ini  kafka_consumer.py  kafka_service.py  manage.py  mypy.ini  package-lock.json  package.json  pyproject.toml  vehicle_change_log.txt  wait-for-db.sh
api/: serializers.py  urls.py  utils.py  views.py
auto/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
auto/management/commands/: addgeopoints.py  better_generate_track.py  bettergeneratetrack.py  createdrivers.py  createvehicles.py  generate_track.py  generatetrack.py  starttelegrambot.py  telegrambot.py
auto/migrations/: 0001_initial.py  0002_vehicle_vin.py  0003_carmodel_alter_vehicle_options.py  0004_alter_carmodel_fuel_tank_volume_and_more.py  0005_alter_carmodel_brand.py  0006_vehicle_model.py  0007_alter_vehicle_model.py  0008_enterprise_alter_vehicle_model_driver_and_more.py  0009_alter_driver_options_alter_enterprise_options.py  0010_alter_driver_driving_experience.py  0011_alter_driver_salary.py  0012_alter_driver_enterprise_alter_driver_vehicle.py  0013_manager.py  0014_alter_manager_options_manager_first_name_and_more.py  0015_alter_manager_user.py  0016_alter_vehicle_photo.py  0017_alter_manager_enterprise.py  0018_enterprise_timezone_alter_vehicle_purchase_date.py  0019_alter_enterprise_timezone_gpsautotrack.py  0020_alter_gpsautotrack_options_and_more.py  0021_remove_gpsautotrack_timestamp_and_more.py  0022_gpsdata.py  0023_autoride.py  0024_autoride_end_point_autoride_start_point.py  0025_autoride_distance.py
auto/templates/auto/: enterprise_list.html  ride_detail.html  vehicle_create.html  vehicle_delete.html  vehicle_detail.html  vehicle_list.html  vehicle_update.html
auto/templates/auto/registration/: login_manager.html
autopark/: asgi.py  base.py  middleware.py  settings.py  timezone_middleware.py  urls.py  wsgi.py
autopark/static/: request_client.js  xhr_interceptor.js
better_auto/: apps.py  models.py  repository.py  serializers.py  service.py  urls.py  views.py
better_auto/migrations/: 0001_initial.py
better_auto/tests/: tests_service.py
cypress/e2e/: basicCommandsTest.cy.js  basicTest.cy.js  django-vehicle-add.cy.js~  runningClickCommand.cy.js  runningClickCommand.cy.js~
cypress/e2e/3-manager-tests/: '  manager-add-vehicle.cy.js  manager-add-vehicle.cy.js~  manager-login-test.cy.js  manager-login-test.cy.js~
report/: admin.py  froms.py  models.py  urls.py  views.py
report/migrations/: 0001_initial.py
report/templates/report/: report_mileage_create.html  report_types.html
templates/: base.html
templates/inc/: _navbar.html
tests/: test_p18.py  test_views.py
