[tool.poetry]
name = "django-autopark"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "django_autopark"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
psycopg2-binary = "^2.9.5"
tzdata = "^2022.7"
djangorestframework = "^3.14.0"
django-bootstrap5 = "^22.2"
django-crispy-forms = "^2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
