[tool.poetry]
name = "django-autopark"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "django_autopark"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
psycopg2-binary = "^2.9.5"
tzdata = "^2022.7"
djangorestframework = "^3.14.0"
django-bootstrap5 = "^22.2"
django-crispy-forms = "^2.0"
pillow = "^9.4.0"
django-stubs = {extras = ["compatible-mypy"], version = "^1.15.0"}
djangorestframework-stubs = {extras = ["compatible-mypy"], version = "^1.9.1"}
mypy = "1.0.1"
djangorestframework-gis = "^1.0"
requests = "^2.28.2"
geopy = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120

[tool.mypy]
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]

[tool.django-stubs]
django_settings_module = "autopark.settings"
