[tool.poetry]
name = "django-autopark"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "django_autopark"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
psycopg2-binary = "^2.9.5"
tzdata = "^2022.7"
djangorestframework = "^3.14.0"
django-bootstrap5 = "^22.2"
django-crispy-forms = "^2.0"
pillow = "^9.4.0"
djangorestframework-gis = "^1.0"
requests = "^2.28.2"
geopy = "^2.3.0"
django-leaflet = "^0.28.3"
openrouteservice = "^2.3.3"
numpy = "^1.24.2"
python-telegram-bot = "^20.2"
reactivex = "^4.0.4"
rx = "^3.2.0"
django-debug-toolbar = "^4.3.0"
confluent-kafka = "^2.3.0"
django-model-utils = "^4.5.0"
pytest = "^8.2.1"
pytest-django = "^4.8.0"
pip = "^24.0"
django-rest-swagger = "^2.2.0"
drf-yasg = "^1.21.7"
python-decouple = "^3.8"
dj-database-url = "^2.2.0"

[tool.poetry.group.dev.dependencies]
django-stubs = {extras = ["compatible-mypy"], version = "^1.15.0"}
djangorestframework-stubs = {extras = ["compatible-mypy"], version = "^1.9.1"}
mypy = "1.0.1"
notebook = "^6.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120

[tool.mypy]
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]

[tool.django-stubs]
django_settings_module = "autopark.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "autopark.settings"
testpaths = "tests/"

[tool.pytest]
django_find_project = false
